<resources>
    <string name="app_name">kotlin-assignment-ten</string>
    <string name="biodata">Biodata</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="schedule">Schedule</string>
    <string name="github">Github</string>
    <string name="education_text">education_text</string>
    <string name="text_work">text_work</string>
    <string name="img_pub">img_pub</string>
    <string name="publication">Publication</string>
</resources>